--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -210,7 +210,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1fa6a125d424fab81d5690ff4016a03",
+       "model_id": "4e123a2ad67d4d489fc17056a9d70f6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd71bc2ccf014aafbf75dbb85a478561",
+       "model_id": "da4c42b752d74d90858cba850e02b54b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,7 +277,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0e65d78d5e34115935e7974f23cd165",
+       "model_id": "03d4c89d00ee46bdb4e39c62b00743a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80ee13d22f854f3f8f5ce22e6266a9ae",
+       "model_id": "b1b571384da24022b6348b5f6cf3c6b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +356,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -755,26 +757,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies and Setup\n",
-    "import requests\n",
-    "import gmaps\n",
-    "\n",
-    "# Import API key\n",
-    "from config import g_key\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Set parameters to search for a hotel.\n",
     "params = {\n",
     "    \"radius\": 5000,\n",
     "    \"type\": \"lodging\",\n",
     "    \"key\": g_key\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterate through the DataFrame.\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    # Get the latitude and longitude.\n",
+    "    lat = row[\"Lat\"]\n",
+    "    lng = row[\"Lng\"]\n",
+    "\n",
+    "    # Add the latitude and longitude to location key for the params dictionary.\n",
+    "    params[\"location\"] = f\"{lat},{lng}\"\n",
+    "\n",
+    "    # Use the search term: \"lodging\" and our latitude and longitude.\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "    # Make request and get the JSON data from the search.\n",
+    "    hotels = requests.get(base_url, params=params).json()\n",
+    "# Grab the first hotel from the results and store the name.\n",
+    "    try:\n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = hotels[\"results\"][0][\"name\"]\n",
+    "    except (IndexError):\n",
+    "        print(\"Hotel not found... skipping.\")\n"
    ]
   },
   {
@@ -819,7 +856,7 @@
        "      <td>80.13</td>\n",
        "      <td>4.8845</td>\n",
        "      <td>-1.7554</td>\n",
-       "      <td></td>\n",
+       "      <td>Raybow International Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -828,7 +865,7 @@
        "      <td>77.25</td>\n",
        "      <td>1.7427</td>\n",
        "      <td>98.7792</td>\n",
-       "      <td></td>\n",
+       "      <td>Hotel Syariah CN Darussalam</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -837,7 +874,7 @@
        "      <td>84.06</td>\n",
        "      <td>18.2170</td>\n",
        "      <td>-63.0578</td>\n",
-       "      <td></td>\n",
+       "      <td>CeBlue Villas &amp; Beach Resort</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -846,7 +883,7 @@
        "      <td>80.89</td>\n",
        "      <td>5.4112</td>\n",
        "      <td>100.3354</td>\n",
-       "      <td></td>\n",
+       "      <td>Cititel Penang</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -855,7 +892,7 @@
        "      <td>81.12</td>\n",
        "      <td>6.3005</td>\n",
        "      <td>-10.7969</td>\n",
-       "      <td></td>\n",
+       "      <td>Sunset Inn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -864,7 +901,7 @@
        "      <td>82.36</td>\n",
        "      <td>-0.7393</td>\n",
        "      <td>-90.3518</td>\n",
-       "      <td></td>\n",
+       "      <td>Finch Bay Galapagos Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -873,7 +910,7 @@
        "      <td>78.31</td>\n",
        "      <td>31.4583</td>\n",
        "      <td>131.2333</td>\n",
-       "      <td></td>\n",
+       "      <td>Hanaoka</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -882,7 +919,7 @@
        "      <td>81.16</td>\n",
        "      <td>-6.6447</td>\n",
        "      <td>-51.9950</td>\n",
-       "      <td></td>\n",
+       "      <td>Rio Xingu Camping</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
@@ -891,7 +928,7 @@
        "      <td>83.19</td>\n",
        "      <td>22.0752</td>\n",
        "      <td>-159.3190</td>\n",
-       "      <td></td>\n",
+       "      <td>Sheraton Kauai Coconut Beach Resort</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
@@ -900,24 +937,36 @@
        "      <td>79.02</td>\n",
        "      <td>5.3848</td>\n",
        "      <td>95.9609</td>\n",
-       "      <td></td>\n",
+       "      <td>Losmen Dua Mali</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  City Country  Max Temp      Lat       Lng Hotel Name\n",
-       "1             Takoradi      GH     80.13   4.8845   -1.7554           \n",
-       "7              Sibolga      ID     77.25   1.7427   98.7792           \n",
-       "8           The Valley      AI     84.06  18.2170  -63.0578           \n",
-       "12          Georgetown      MY     80.89   5.4112  100.3354           \n",
-       "13            Monrovia      LR     81.12   6.3005  -10.7969           \n",
-       "23        Puerto Ayora      EC     82.36  -0.7393  -90.3518           \n",
-       "27             Kushima      JP     78.31  31.4583  131.2333           \n",
-       "30  Sao Felix Do Xingu      BR     81.16  -6.6447  -51.9950           \n",
-       "33               Kapaa      US     83.19  22.0752 -159.3190           \n",
-       "36               Sigli      ID     79.02   5.3848   95.9609           "
+       "                  City Country  Max Temp      Lat       Lng  \\\n",
+       "1             Takoradi      GH     80.13   4.8845   -1.7554   \n",
+       "7              Sibolga      ID     77.25   1.7427   98.7792   \n",
+       "8           The Valley      AI     84.06  18.2170  -63.0578   \n",
+       "12          Georgetown      MY     80.89   5.4112  100.3354   \n",
+       "13            Monrovia      LR     81.12   6.3005  -10.7969   \n",
+       "23        Puerto Ayora      EC     82.36  -0.7393  -90.3518   \n",
+       "27             Kushima      JP     78.31  31.4583  131.2333   \n",
+       "30  Sao Felix Do Xingu      BR     81.16  -6.6447  -51.9950   \n",
+       "33               Kapaa      US     83.19  22.0752 -159.3190   \n",
+       "36               Sigli      ID     79.02   5.3848   95.9609   \n",
+       "\n",
+       "                             Hotel Name  \n",
+       "1            Raybow International Hotel  \n",
+       "7           Hotel Syariah CN Darussalam  \n",
+       "8          CeBlue Villas & Beach Resort  \n",
+       "12                       Cititel Penang  \n",
+       "13                           Sunset Inn  \n",
+       "23            Finch Bay Galapagos Hotel  \n",
+       "27                              Hanaoka  \n",
+       "30                    Rio Xingu Camping  \n",
+       "33  Sheraton Kauai Coconut Beach Resort  \n",
+       "36                      Losmen Dua Mali  "
       ]
      },
      "execution_count": 16,
@@ -926,25 +975,6 @@
     }
    ],
    "source": [
-    "# Iterate through the DataFrame.\n",
-    "for index, row in hotel_df.iterrows():\n",
-    "    # Get the latitude and longitude.\n",
-    "    lat = row[\"Lat\"]\n",
-    "    lng = row[\"Lng\"]\n",
-    "\n",
-    "    # Add the latitude and longitude to location key for the params dictionary.\n",
-    "    params[\"location\"] = f\"{lat},{lng}\"\n",
-    "\n",
-    "    # Use the search term: \"lodging\" and our latitude and longitude.\n",
-    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
-    "    # Make request and get the JSON data from the search.\n",
-    "    hotels = requests.get(base_url, params=params).json()\n",
-    "# Grab the first hotel from the results and store the name.\n",
-    "try:\n",
-    "    hotel_df.loc[index, \"Hotel Name\"] = hotels[\"results\"][0][\"name\"]\n",
-    "except (IndexError):\n",
-    "    print(\"Hotel not found... skipping.\") \n",
-    "\n",
     "hotel_df.head(10)"
    ]
   },
@@ -956,7 +986,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31dae7cfe4c045eeb4526d9febb662e1",
+       "model_id": "9e125dcd27224e359daee3746862d49d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1016,7 +1046,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ba48478af7f41fdb03ca646c86336a5",
+       "model_id": "84c8829a0ee84625a7addf01ab3be93a",
        "version_major": 2,
        "version_minor": 0
       },
