--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -54,97 +54,109 @@
        "      <th>City_ID</th>\n",
        "      <th>City</th>\n",
        "      <th>Country</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Current Description</th>\n",
        "      <th>Lat</th>\n",
        "      <th>Lng</th>\n",
-       "      <th>Hotel Name</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Current Description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Sabang</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>83.12</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>5.8933</td>\n",
-       "      <td>95.3214</td>\n",
-       "      <td>Hotel Citra</td>\n",
+       "      <td>Busselton</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>-33.6500</td>\n",
+       "      <td>115.3333</td>\n",
+       "      <td>56.08</td>\n",
+       "      <td>79</td>\n",
+       "      <td>21</td>\n",
+       "      <td>12.35</td>\n",
+       "      <td>light rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Laguna</td>\n",
-       "      <td>US</td>\n",
-       "      <td>89.44</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>38.4210</td>\n",
-       "      <td>-121.4238</td>\n",
-       "      <td>Holiday Inn Express &amp; Suites Elk Grove Central...</td>\n",
+       "      <td>Sabang</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>5.8933</td>\n",
+       "      <td>95.3214</td>\n",
+       "      <td>83.12</td>\n",
+       "      <td>74</td>\n",
+       "      <td>100</td>\n",
+       "      <td>15.97</td>\n",
+       "      <td>overcast clouds</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Rikitea</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>75.63</td>\n",
+       "      <td>Qaanaaq</td>\n",
+       "      <td>GL</td>\n",
+       "      <td>77.4840</td>\n",
+       "      <td>-69.3632</td>\n",
+       "      <td>38.07</td>\n",
+       "      <td>84</td>\n",
+       "      <td>100</td>\n",
+       "      <td>5.08</td>\n",
        "      <td>overcast clouds</td>\n",
-       "      <td>-23.1203</td>\n",
-       "      <td>-134.9692</td>\n",
-       "      <td>Pension Maro'i</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Dingle</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>76.30</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>10.9995</td>\n",
-       "      <td>122.6711</td>\n",
-       "      <td>SEGAYA PROPERTY</td>\n",
+       "      <td>Port Alfred</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>-33.5906</td>\n",
+       "      <td>26.8910</td>\n",
+       "      <td>60.91</td>\n",
+       "      <td>83</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.19</td>\n",
+       "      <td>clear sky</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Nikolskoye</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>73.29</td>\n",
-       "      <td>broken clouds</td>\n",
-       "      <td>59.7035</td>\n",
-       "      <td>30.7861</td>\n",
-       "      <td>Tourist House - Sablino</td>\n",
+       "      <td>Punta Arenas</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>-53.1500</td>\n",
+       "      <td>-70.9167</td>\n",
+       "      <td>39.31</td>\n",
+       "      <td>87</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7.56</td>\n",
+       "      <td>few clouds</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
-       "0        0      Sabang      ID     83.12     overcast clouds   5.8933   \n",
-       "1        1      Laguna      US     89.44           clear sky  38.4210   \n",
-       "2        2     Rikitea      PF     75.63     overcast clouds -23.1203   \n",
-       "3        3      Dingle      PH     76.30          light rain  10.9995   \n",
-       "4        4  Nikolskoye      RU     73.29       broken clouds  59.7035   \n",
+       "   City_ID          City Country      Lat       Lng  Max Temp  Humidity  \\\n",
+       "0        0     Busselton      AU -33.6500  115.3333     56.08        79   \n",
+       "1        1        Sabang      ID   5.8933   95.3214     83.12        74   \n",
+       "2        2       Qaanaaq      GL  77.4840  -69.3632     38.07        84   \n",
+       "3        3   Port Alfred      ZA -33.5906   26.8910     60.91        83   \n",
+       "4        4  Punta Arenas      CL -53.1500  -70.9167     39.31        87   \n",
        "\n",
-       "        Lng                                         Hotel Name  \n",
-       "0   95.3214                                        Hotel Citra  \n",
-       "1 -121.4238  Holiday Inn Express & Suites Elk Grove Central...  \n",
-       "2 -134.9692                                     Pension Maro'i  \n",
-       "3  122.6711                                    SEGAYA PROPERTY  \n",
-       "4   30.7861                            Tourist House - Sablino  "
+       "   Cloudiness  Wind Speed Current Description  \n",
+       "0          21       12.35          light rain  \n",
+       "1         100       15.97     overcast clouds  \n",
+       "2         100        5.08     overcast clouds  \n",
+       "3           0       15.19           clear sky  \n",
+       "4          20        7.56          few clouds  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 1. Import the WeatherPy_database.csv file. \n",
-    "city_data_df = pd.read_csv(\"WeatherPy_Database.csv\")\n",
+    "city_data_df = pd.read_csv(\"../Weather_Database/WeatherPy_Database.csv\")\n",
     "city_data_df.head()"
    ]
   },
@@ -987,19 +999,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 8a. Create the output File (CSV)\n",
-    "output_data_file = \"WeatherPy_Database.csv\"\n",
+    "output_data_file = \"WeatherPy_vacation.csv\"\n",
     "# 8b. Export the City_Data into a csv\n",
     "clean_hotel_df.to_csv(output_data_file, index_label=\"City_ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
